[tool.poetry]
name = "datasette-ml"
version = "0.0.0"
description = "A Datasette plugin providing an MLOps platform to train, eval and predict ML models"
repository = "https://github.com/rclement/datasette-ml"
authors = ["Romain Clement"]
license = "Apache License, Version 2.0"
readme = "README.md"
packages = [{include = "datasette_ml"}]

[tool.poetry.dependencies]
python = "^3.10"
datasette = "^0.64.2"
scikit-learn = "^1.2.2"
pandas = "^1.5.3"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
faker = "^18.3.1"
flake8 = "^6.0.0"
importlib-metadata = "^6.1.0"
mypy = "^1.1.1"
pytest = "^7.2.2"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
sqlite-utils = "^3.30"

[tool.poetry.plugins."datasette"]
"ml" = "datasette_ml"

[tool.mypy]
show_error_codes = "True"
pretty = "True"
follow_imports = "silent"
strict_optional = "True"
warn_redundant_casts = "True"
warn_unused_ignores = "True"
disallow_any_generics = "True"
check_untyped_defs = "True"
no_implicit_reexport = "True"
disallow_untyped_defs = "True"

[[tool.mypy.overrides]]
module = "datasette.*"
ignore_missing_imports = "True"

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = "True"

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = "True"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
