[tool.poetry]
name = "datasette-ml"
version = "0.1.2"
description = "A Datasette plugin providing an MLOps platform to train, eval and predict machine learning models"
repository = "https://github.com/rclement/datasette-ml"
authors = ["Romain Clement"]
license = "Apache License, Version 2.0"
readme = "README.md"
packages = [{include = "datasette_ml"}]

[tool.poetry.dependencies]
python = "^3.8.1"
datasette = "*"
sqlite-ml = "==0.1.2"

[tool.poetry.group.dev.dependencies]
black = "==23.7.0"
faker = "==19.6.2"
flake8 = "==6.1.0"
mypy = "==1.5.1"
pytest = "==7.4.2"
pytest-asyncio = "==0.21.1"
pytest-cov = "==4.1.0"
sqlite-utils = "==3.35.1"

[tool.poetry.plugins."datasette"]
"ml" = "datasette_ml"

[tool.mypy]
show_error_codes = "True"
pretty = "True"
follow_imports = "silent"
strict_optional = "True"
warn_redundant_casts = "True"
warn_unused_ignores = "True"
disallow_any_generics = "True"
check_untyped_defs = "True"
no_implicit_reexport = "True"
disallow_untyped_defs = "True"

[[tool.mypy.overrides]]
module = "datasette.*"
ignore_missing_imports = "True"

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = "True"

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = "True"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
